# tk-websockets

./: .travis.yml  Cargo.toml
benches/: masking.rs  xor.rs
src/: codec.rs  lib.rs  message.rs  transport.rs
src/handshake/: client.rs  http.rs  mod.rs  server.rs
