[package]
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
name = "tk-websockets"
version = "0.1.0"

[dependencies]
base64 = "0.4.0"
bytes = "0.4.1"
futures = "0.1.13"
httparse = "1.2.1"
nom = "2.2.0"
rand = "0.3.15"
sha1 = "0.2.0"
tokio-io = "0.1.0"
tokio-proto = "0.1.1"
url = "1.4.0"

[dev-dependencies]
tokio-core = "0.1.6"